pkg/kgateway/agentgatewaysyncer/testdata/inputs/direct-response/manifest.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: example-gateway
spec:
  gatewayClassName: agentgateway-v2
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: DirectResponse
metadata:
  name: direct-response
spec:
  status: 510
  body: "User-agent: *\nDisallow: /direct-response\n"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example
spec:
  parentRefs:
    - name: example-gateway
  hostnames:
    - "example.com"
  rules:
    - filters:
      - type: ExtensionRef
        extensionRef:
          name: direct-response
          group: gateway.kgateway.dev
          kind: DirectResponse
